--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <h1> Página principal temporária da MusicDot </h1>
     <h1>MusicDot</h1>
     <h2>Bem-vindo à MusicDot, seu portal de cursos de música online.</h2>
     <ul>
@@ -15,7 +16,6 @@
         <li>Navegue por todos nossos cursos disponíveis.</li>
         <li>Aprenda sem sair de casa.</li>
     </ul>
-    
 	<a href="./sobre.html"> Sobre </a>
 
 </body>
